src/app/app.component.css
.header {
    display: flex;
    justify-content: center;
    height: 200px;
}

.header img {
    display: inline-flex;
    height: 150px;
    width: 150px;
    border-radius: 50%;
    align-self: center;
    margin-left: auto;
}

@font-face {
    font-family: Monego;
    src: url('/assets/Monego-Regular.otf') format('opentype');
}

.headerText {
  display: inline-flex;
  flex-direction: column;
  text-align: center;
}

.headerText h1 {
    font-family: Monego;
    font-size: 72px;
    margin: 0px 20px;
}

.headerText h4 {
    font-family: Monego;
    font-size: 24px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.headerText p {
    margin-top: 0px;
}

.headerLinks {
  display: block;
}

.headerLinks a {
    font-family: Arial;
    color: black;
    text-decoration: none;
    padding: 0px 16px;
    font-size: 20px;
}

.icons {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    margin-right: auto;
}

.icons img {
    width: 32px;
    height: 32px;
}

.login {
  text-decoration: none;
  color: #000;
  align-self: flex-start;
}

.spacer {
    display: block;
    background-color: darkgray;
    height: 2px;
    width: 100%;
}

.routerOutlet {
  position: absolute;
  overflow: scroll;
  top: 210px;
  bottom: 0px;
  width: 98%;
}

